--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -130,6 +130,9 @@ article.entry-card {
 }
 */
 
+article .pin-title-icon.group svg, .group-post-wrapper.ready .pin-title-icon.group svg {
+    background: var(--ci-tutorial-notification);
+}
 article.ready .pin-title-icon.group svg, .group-post-wrapper.ready .pin-title-icon.group svg {
     background: var(--ci-group-ready);
 }
@@ -179,19 +182,23 @@ article.founded label[for="tab-group"] {
     margin-left: 10px;
 }
 
+
 .watch-btn-wrapper .rpi-wall-watch-button {
     border-radius: 50%;
     background-color: white;
     height: 32px;
     padding: 5px;
+    opacity: 0.3;
 }
 
 .watch-btn-wrapper .rpi-wall-watch-button:hover {
     background-color: var(--ci-tab-background-darker);
+    opacity: 1;
 }
 
 .watch-btn-wrapper .rpi-wall-watch-button.watching {
     background-color: var(--ci-accent-color);
+    opacity: 1;
 }
 
 .watch-btn-wrapper span {
@@ -200,6 +207,16 @@ article.founded label[for="tab-group"] {
     color: black;
     font-weight: bold;
 }
+
+.post-type-archive-wall.logged-in .watch-btn-wrapper {
+    margin: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    border-radius: 0 0 0 25px;
+    background-color: #efefef;
+}
+
 
 #comments {
     margin-top: 0;
