CHANGES: UPDATED display of meeting date in group view of member page

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -583,8 +583,11 @@ article.entry-card.type-wall .plg-wrapper {
 .group-post .entry-meta svg {
     max-width: 18px;
     height: 15px;
-
 }
+.group-post .next-meeting hr{
+    background-color: #ddd;
+}
+
 
 .group-post-wrapper .content {
     padding-bottom: 20px;
