CHANGES: ADDED logic for closing PLGs via toolbar button

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -924,7 +924,7 @@ article:not(.founded) .like-group-box {
     right: 0;
 
     display: grid;
-    grid-template-columns: repeat(1, 1fr 1fr);
+    grid-template-columns: repeat(1, 1fr 1fr 1fr);
     grid-gap: 5px;
 }
 
@@ -1169,12 +1169,11 @@ body.toolbar #wpadminbar {
     color: #999;
 }
 
-#btn-open-modal-edit-buttons, #btn-open-faq {
+#btn-open-modal-edit-buttons,#btn-open-modal-close-plg, #btn-open-faq {
     background-color: var(--ci-tutorial-notification);
     box-shadow: none;
     color: black;
     border-radius: 5px;
-
     display: inline-flex;
     justify-content: center;
     height: 40px;
@@ -1182,7 +1181,7 @@ body.toolbar #wpadminbar {
     text-align: center;
 }
 
-#btn-open-modal-edit-buttons:hover, #btn-open-faq:hover {
+#btn-open-modal-edit-buttons:hover, btn-open-modal-edit-buttons:hover, #btn-open-faq:hover {
     background-color: var(--ci-tab-background-darker);
 }
 
