CHANGES: FIXED problem with facet wp paging ADDED missing wall_tags filter to member page UPDATED member entry card font size

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -102,6 +102,10 @@ article.entry-card {
     position: relative;
 }
 
+article.entry-card.member h4{
+    font-size: 20px;
+}
+
 /*
 .rpi-wall-group-status-triangle {
     position: absolute;
