--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -898,6 +898,7 @@ article:not(.founded):not(.closed) .like-group-box {
     background-color: var(--ci-tab-background);
     width: 100%;
     border-radius: 15px;
+    padding: 5px 0;
 }
 
 .toolbar-header {
