CHANGES: fix empty termin date fix missing field outputs add custom css Protokoll

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -1217,3 +1217,13 @@ body.toolbar #wpadminbar {
     font-weight: bold;
     font-size: large;
 }
+
+
+/* Protokoll */
+.single-protokoll h2{
+    border-bottom: 1px solid #ccc;
+    font-size:medium;
+    margin-top:30px;
+    background-color:#f9c227;
+    padding: 5px 20px;
+}
