--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -1244,3 +1244,11 @@ body.toolbar #wpadminbar {
     background-color: #f9c227;
     padding: 5px 20px;
 }
+.single-protokoll h3 {
+    font-size: 20px;
+}
+.protokoll-container{
+    margin: 0 50px 50px 30px !important;
+    border-left: 2px solid #f9c227;
+    padding-left: 50px;
+}
