--- a/assets/css/tabs.css
+++ b/assets/css/tabs.css
@@ -91,7 +91,7 @@ body {
     fill: black;
 }
 .tab-panels {
-    border-top: 2px solid var(--paletteColor5);
+    border-top: 2px solid var(--theme-palette-color-5);
     margin-top: -9px;
     padding-top: 20px;
 }
@@ -109,7 +109,7 @@ body {
     font-size: 18px;
     color: #aaa;
     text-align: center;
-    border-bottom: 1px solid var(--paletteColor5);
+    border-bottom: 1px solid var(--theme-palette-color-5);
     display: none;
 }
 
